# booot

./: .env  1.repo  README.md  docker-compose.yml  pyproject.toml
src/booot/: __init__.py  config.py  db.py  enums.py  keyboards.py  logging_setup.py  main.py  models.py  permissions.py  routing.py  seed.py  ticketing.py
src/booot/handlers/: common.py  staff.py  student.py  superadmin.py
src/booot/services/: announcements.py  reminders.py  routing.py  tickets.py
