[project]
name = "booot"
version = "0.1.0"
description = "University Service Desk Telegram Bot"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.6.0",
  "SQLAlchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "redis>=5.0.4",
  "apscheduler>=3.10.4",
  "python-dotenv>=1.0.1",
  "structlog>=24.1.0",
]

[project.scripts]
booot = "booot.main:run"

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"
